--- a/content/about.html
+++ b/content/about.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
-{% block title %} Index {% endblock %}
+{%- extends "base.html" -%}
+{%- block title -%} Index {%- endblock -%}
 
 
-{% block content %}
-{% filter markdown %}
+{%- block content -%}
+{%- filter markdown -%}
 
 description of me
 
-{% endfilter %}
-{% endblock %}
+{%- endfilter -%}
+{%- endblock -%}
