--- a/content/settings.html
+++ b/content/settings.html
@@ -1,41 +1,29 @@
-{% extends "base.html" %}
-{% block title %} Settings {% endblock %}
+{%- extends "base.html" -%}
+{%- block title -%} Settings {%- endblock -%}
 
 
-{% block content %}
+{%- block content -%}
 
-<div class="theme-panel">
-    {% for theme in THEME_NAMES %}
-    <div class="{{ theme }}">
-        {% for type in THEME_TYPES[::-1] %}
-        {{ m.set_theme_button(theme, type) }}
-        {% endfor %}
-    </div>
-    {% endfor %}
-</div>
+{{ m.theme_panel() }}
 
-<span class="switch-block"> {{ m.switch("use_js") }} 
+{%- call m.settings_option("use_js") -%}
     Javascript <br>
     (when this option is disabled, all buttons turn into links
     and reload the page with the functionality preserved).
-</span>
+{%- endcall -%}
 
-<span class="switch-block"> {{ m.switch("use_hl") }} 
+{%- call m.settings_option("use_hl") -%}
     Code highlighting.
-</span>
+{%- endcall -%}
 
-<span class="switch-block"> {{ m.switch("fonts") }}
+{%- call m.settings_option("fonts") -%}
     External fonts <br>
     (Connects fonts from third-party resources instead of standard browser fonts).
-</span>
+{%- endcall -%}
 
-<span class="switch-block"> {{ m.switch("extra_css") }}
+{%- call m.settings_option("extra_css") -%}
     Extra CSS animations <br>
     (Connects an additional stylesheet with animations).
-</span>
+{%- endcall -%}
 
-<div class="centered">
-    {{ m.link_button("Apply changes (reloads the page)", "/settings") }}
-</div>
-
-{% endblock %}
+{%- endblock -%}
