add more formatting, return some whitespaces

--- a/content/settings.html
+++ b/content/settings.html
@@ -8,7 +8,7 @@
 
 {%- call m.settings_option("use_js") -%}
     Javascript <br>
-    (when this option is disabled, all buttons turn into links
+    (Reloads the page. When this option is disabled, all buttons turn into links
     and reload the page with the functionality preserved).
 {%- endcall -%}
 
