--- a/content/.about.html
+++ b/content/.about.html
@@ -10,7 +10,7 @@ _Some main page text_
 {%- call m.highlight("python") -%}
 @app.route('/')
 def index():
-    return render_template("index.html")
+    return "some code piece for highlight testing"
 {%- endcall -%}
 
 {%- endfilter -%}
