add copy tooltip and animation

--- a/content/.about.html
+++ b/content/.about.html
@@ -13,7 +13,7 @@ def index():
     return "some code piece for highlight testing"
 {%- endcall -%}
 
-{{ m.folder_file_list() }}
+{{- m.link_button("Source", "/source") -}}
 
 {%- endfilter -%}
 {%- endblock -%}
