--- a/content/license.html
+++ b/content/license.html
@@ -20,16 +20,16 @@
         {{- LICENSE_TEXT -}}
     </pre>
     <hr>
+</div>
 
-    <div class="line-block">
-        <a href="https://github.com/google/material-design-icons/blob/master/LICENSE" class="button">
-            <span class="icon" data-icon="category"></span>
-            Material icons license
-        </a>
-        <a href="https://github.com/primer/octicons/blob/main/LICENSE" class="button">
-            <span class="svg-icon github-icon"></span>
-            Octicons license
-        </a>
-    </div>
+<div class="centered-line-block">
+    <a href="https://github.com/google/material-design-icons/blob/master/LICENSE" class="button">
+        <span class="icon" data-icon="category"></span>
+        Material icons license
+    </a>
+    <a href="https://github.com/primer/octicons/blob/main/LICENSE" class="button">
+        <span class="svg-icon github-icon"></span>
+        Octicons license
+    </a>
 </div>
 {%- endblock -%}
