--- a/content/stuff/spinner.html
+++ b/content/stuff/spinner.html
@@ -91,7 +91,7 @@
     </div>
 
     <input
-        id="{{ var_name }}" class="button range" type="range"
+        id="{{ var_name }}" class="frame range" type="range"
         min="{{ min }}" max="{{ max }}" step="{{ step }}" value="{{ value }}"
     >
 </div>
