refactor jsless mode to post queries

--- a/content/settings.html
+++ b/content/settings.html
@@ -36,7 +36,7 @@
 <hr>
 
 <div class="range-block">
-    <form action="" method="get" class="line-block">
+    <form action="" method="post" class="line-block">
         <label for="body-width-range" class="frame">{{ g.body_width }}</label>
         
         {%- if not g.use_js -%}
