add folder articles

--- a/content/.about.html
+++ b/content/.about.html
@@ -4,7 +4,7 @@
 
 {%- block content -%}
 
-<h3 class="centered">Articles (on russian):</h3>
+<h3 class="centered">Articles</h3>
 {{ m.article_preview_block() }}
 
 <hr>
